--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -25,6 +25,9 @@ jobs:
   Build:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: result
     
     # Setup multiple node versions to test
     strategy:
@@ -38,6 +41,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
-          cache: 'npm'
+          #cache: 'npm'
+      
+      # Install npm dependencies before build
+      - run: npm install
       - run: npm ci
       - run: npm test
