--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -22,7 +22,7 @@ on:
 jobs:
   
   # Test and Build node.js image
-  Build:
+  Test-Node:
 
     runs-on: ubuntu-latest
     defaults:
@@ -44,3 +44,39 @@ jobs:
       
       # Install npm dependencies before build
       - run: npm ci
+      
+  registry_login:
+    # runs-on: ubuntu-latest
+    # steps:
+    #   - name: Login to ECR
+    #     uses: docker/login-action@v3
+    #     with:
+    #       registry: ${{ vars.aws-account-number }}.dkr.ecr.${{ vars.region }}.amazonaws.com
+    #       username: ${{ vars.AWS_ACCESS_KEY_ID }}
+    #       password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+    runs-on: ubuntu-latest
+    steps:
+
+      - uses: actions/checkout@v5
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ vars.region }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Build, tag, and push docker image to Amazon ECR
+        id: build-image
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: voting
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
