--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -22,7 +22,7 @@ on:
 jobs:
   
   # Test and Build node.js image
-  Build:
+  Test-Node:
 
     runs-on: ubuntu-latest
     defaults:
@@ -45,6 +45,7 @@ jobs:
       # Install npm dependencies before build
       - run: npm ci
       
+  registry_login:
     # runs-on: ubuntu-latest
     # steps:
     #   - name: Login to ECR
@@ -53,6 +54,14 @@ jobs:
     #       registry: ${{ vars.aws-account-number }}.dkr.ecr.${{ vars.region }}.amazonaws.com
     #       username: ${{ vars.AWS_ACCESS_KEY_ID }}
     #       password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+    runs-on: ubuntu-latest
+    runs:
+      defaults:
+        working-directory: result
+
+    steps:
+      - uses: actions/checkout@v5
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -69,7 +78,7 @@ jobs:
         id: build-image
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: voting
+          REPOSITORY: results
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
