AWS ECR Results

--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -45,7 +45,7 @@ jobs:
       # Install npm dependencies before build
       - name: Check Dependencies
         run:  | 
-          ci && \
+          npm ci && \
           npm cache clean --force
       - name: Remove Dependencies to build image
         run: rm -rf node_modules
