--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,20 @@ services:
       - front-tier
     restart: "no"
 
+  nginx:
+    image: nginx
+    container_name: nginx
+    ports:
+      - "8080:8080"
+      - "8081:8081"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - vote
+      - result
+    networks:
+      - front-tier
+
 volumes:
   db-data:
 
