--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -1,22 +1,22 @@
 name: Build Result
 # template source: https://github.com/dockersamples/.github/blob/main/templates/call-docker-build.yaml
 
-on:
-  # we want pull requests so we can build(test) but not push to image registry
-  push:
-    branches:
-      - 'main'
-    # only build when important files change
-    paths:
-      - 'result/**'
-      - '.github/workflows/call-docker-build-result.yaml'
-  pull_request:
-    branches:
-      - 'main'
-    # only build when important files change
-    paths:
-      - 'result/**'
-      - '.github/workflows/call-docker-build-result.yaml'
+# on:
+#   # we want pull requests so we can build(test) but not push to image registry
+#   push:
+#     branches:
+#       - 'main'
+#     # only build when important files change
+#     paths:
+#       - 'result/**'
+#       - '.github/workflows/call-docker-build-result.yaml'
+#   pull_request:
+#     branches:
+#       - 'main'
+#     # only build when important files change
+#     paths:
+#       - 'result/**'
+#       - '.github/workflows/call-docker-build-result.yaml'
 
 # Jobs
 jobs:
