--- a/.github/workflows/master-workflow.yaml
+++ b/.github/workflows/master-workflow.yaml
@@ -83,7 +83,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@5
+      - uses: actions/checkout@v5
         with:
           repository: anaaakareem/vote-iac
           token: ${{ secrets.terraform_token }}
