--- a/.github/workflows/master-workflow.yaml
+++ b/.github/workflows/master-workflow.yaml
@@ -81,6 +81,9 @@ jobs:
   ConatinerRegistry:
     
     runs-on: ubuntu-latest
+    env:
+      TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     
     steps:
       - uses: actions/checkout@v5
@@ -94,6 +97,7 @@ jobs:
           terraform_version: "1.1.7"
 
       - name: Terraform fmt
+        env:
         id: fmt
         run: terraform fmt -check
         continue-on-error: true
