--- a/.github/workflows/master-workflow.yaml
+++ b/.github/workflows/master-workflow.yaml
@@ -22,7 +22,7 @@ on:
 
 jobs:
 
-  Result-Test:
+  ResultTest:
     
     runs-on: ubuntu-latest
     
@@ -81,6 +81,7 @@ jobs:
   ConatinerRegistry:
     
     runs-on: ubuntu-latest
+    needs: [ ResultTest, VoteTest ]
     env:
       TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -133,6 +134,7 @@ jobs:
   ResultsBuildAndPublish:
 
     runs-on: ubuntu-latest
+    needs: ConatinerRegistry
     
     defaults:
      run:
@@ -165,6 +167,7 @@ jobs:
   VoteBuildAndPublish:
 
     runs-on: ubuntu-latest
+    needs: ConatinerRegistry
     
     defaults:
      run:
@@ -197,6 +200,7 @@ jobs:
   WorkerBuildAndPublish:
 
     runs-on: ubuntu-latest
+    needs: ConatinerRegistry
     
     defaults:
      run:
