--- a/.github/workflows/master-workflow.yaml
+++ b/.github/workflows/master-workflow.yaml
@@ -82,10 +82,6 @@ jobs:
     
     runs-on: ubuntu-latest
     needs: [ ResultTest, VoteTest ]
-    outputs:
-      vote_name: ${{ steps.vote_name.output.VOTE_REPO }}
-      result_name: ${{ steps.vote_name.output.RESULT_REPO }}
-      worker_name: ${{ steps.vote_name.output.WORKER_REPO }}
     env:
       TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -157,7 +153,7 @@ jobs:
         id: build-image
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{ RESULT_REPO }}
+          REPOSITORY: ${{ env.RESULT_REPO }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
@@ -190,7 +186,7 @@ jobs:
         id: build-image
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{ VOTE_REPO }}
+          REPOSITORY: ${{ env.VOTE_REPO }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
@@ -223,7 +219,7 @@ jobs:
         id: build-image
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{ WORKER_REPO }}
+          REPOSITORY: ${{ env.WORKER_REPO }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
