--- a/.github/workflows/master-workflow.yaml
+++ b/.github/workflows/master-workflow.yaml
@@ -83,9 +83,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ ResultTest, VoteTest ]
     outputs:
-      vote_name: ${{ steps.vote_name.output.vote_name }}
-      result_name: ${{ steps.result_name.output.result_name }}
-      worker_name: ${{ steps.worker_name.output.worker_name }}
+      vote_name: ${{ steps.vote_name.outputs.vote_name }}
+      result_name: ${{ steps.result_name.outputs.result_name }}
+      worker_name: ${{ steps.worker_name.outputs.worker_name }}
     env:
       TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
