--- a/k8s-specifications/result-deployment.yaml
+++ b/k8s-specifications/result-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
     app: result
   name: result
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: result
@@ -14,9 +14,16 @@ spec:
       labels:
         app: result
     spec:
+      imagePullSecrets:
+        - name: ecr-secret
       containers:
-      - image: dockersamples/examplevotingapp_result
+      - image: $IMAGE
         name: result
         ports:
         - containerPort: 80
           name: result
+        envFrom:
+          - configMapRef:
+              name: app-config
+          - secretRef:
+              name: app-secrets
