--- a/k8s-specifications/vote-deployment.yaml
+++ b/k8s-specifications/vote-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
     app: vote
   name: vote
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: vote
@@ -14,9 +14,16 @@ spec:
       labels:
         app: vote
     spec:
+      imagePullSecrets:
+        - name: ecr-secret
       containers:
-      - image: dockersamples/examplevotingapp_vote
+      - image: $IMAGE
         name: vote
         ports:
         - containerPort: 80
           name: vote
+        envFrom:
+          - configMapRef:
+              name: app-config
+          - secretRef:
+              name: app-secrets
