--- a/k8s-specifications/worker-deployment.yaml
+++ b/k8s-specifications/worker-deployment.yaml
@@ -14,6 +14,13 @@ spec:
       labels:
         app: worker
     spec:
+      imagePullSecrets:
+        - name: ecr-secret
       containers:
-      - image: dockersamples/examplevotingapp_worker
+      - image: $IMAGE
         name: worker
+        envFrom:
+          - configMapRef:
+              name: app-config
+          - secretRef:
+              name: app-secrets
